add DTOs for different API endpoints